--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,49 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.ts",
+    "prebuild": "npm install",
+    "build": "tsc && tsc-alias",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
+    "express-validator": "^7.2.0",
+    "lodash": "^4.17.21",
+    "module-alias": "^2.2.3",
+    "ts-node": "^10.9.2",
+    "uuid": "^9.0.1",
+    "youtube-transcript": "^1.2.1",
+    "youtube-transcript-api": "^1.1.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
+    "@types/ms": "^0.7.34",
+    "@types/node": "^20.12.7",
+    "nodemon": "^3.1.0",
+    "tsc-alias": "^1.8.10",
+    "typescript": "^5.7.2"
+  },
+  "_moduleAliases": {
+    "@models": "src/models",
+    "@controllers": "src/controllers",
+    "@routes": "src/routes",
+    "@utils": "src/utils",
+    "@middleware": "src/middleware",
+    "@shared": "src/shared"
+  }
 }
