--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cra-template-typescript": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.11",
+    "framer-motion": "^11.11.11",
+    "lodash": "^4.17.21",
+    "postcss-cli": "^11.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-loading-skeleton": "^3.4.0",
+    "react-lottie": "^1.2.4",
+    "react-onclickoutside": "^6.13.1",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.2",
+    "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
