--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.74",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
