--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 GEMINI_API_KEY=AIzaSyBoMIuLaeFI6-qIlAoSz4S8a-CP31K65SQ
-RAPIDAPI_KEY=b2fafcf71fmsh66f1a7c48d2dbfap19435cjsn447471a8f85a
+RAPIDAPI_KEY=cff2717f3cmsh34fa81af1dcea81p16a5f3jsnd2fba0dc9b48
+# RAPIDAPI_KEY=b2fafcf71fmsh66f1a7c48d2dbfap19435cjsn447471a8f85a
 RAPIDAPI_HOST=youtube-transcriptor.p.rapidapi.com
