--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.7.7",
+    "@hookform/resolvers": "^3.9.1",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.11.11",
     "lodash": "^4.17.21",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.4.0",
     "react-lottie": "^1.2.4",
@@ -19,7 +21,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.4.0"
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,8 +48,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^18.2.19",
+    "@types/lodash": "^4.17.14",
     "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.19",
+    "@types/react-query": "^1.2.8",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
